--- a/app/src/main/res/layout/card_movie.xml
+++ b/app/src/main/res/layout/card_movie.xml
@@ -11,6 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="false"
         android:padding="16dp">
 
         <ImageView
@@ -21,7 +22,8 @@
             android:layout_alignParentTop="true"
             android:layout_marginEnd="16dp"
             android:contentDescription="@string/app_name"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            app:srcCompat="@mipmap/ic_launcher_round"
+            tools:ignore="ImageContrastCheck" />
 
         <TextView
             android:id="@+id/title"
@@ -59,7 +61,8 @@
             android:layout_below="@id/movieReleaseDate"
             android:layout_toEndOf="@+id/imageIcon"
             android:clickable="true"
-            app:srcCompat="@drawable/ic_baseline_delete_24"
+            app:showAsAction="always"
+            app:srcCompat="@android:drawable/ic_menu_delete"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
