--- a/app/src/main/res/menu/map_menu.xml
+++ b/app/src/main/res/menu/map_menu.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-<item
+    <item
         android:id="@+id/movieListFragment"
         android:orderInCategory="100"
         android:title="@string/MovieList"
         app:showAsAction="never" />
     <item
-        android:id="@+id/mapFragment"
+        android:id="@+id/movieFragment"
         android:orderInCategory="100"
-        android:title="@string/movieMap"
+        android:title="@string/AddMovie"
         app:showAsAction="never" />
 </menu>
