--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/movieFragment"
-        android:name="com.mymovielist.fragments.MovieFragment"
+        android:name="com.mymovielist.ui.movie.MovieFragment"
         android:label="@string/AddMovie"
         tools:layout="@layout/fragment_movie" >
         <action
@@ -23,7 +23,7 @@
     </fragment>
     <fragment
         android:id="@+id/movieListFragment"
-        android:name="com.mymovielist.fragments.MovieListFragment"
+        android:name="com.mymovielist.ui.movieList.MovieListFragment"
         android:label="@string/MovieList"
         tools:layout="@layout/fragment_movie_list" >
         <action
@@ -34,6 +34,11 @@
         <action
             android:id="@+id/action_movieListFragment_to_mapFragment"
             app:destination="@id/mapFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
+        <action
+            android:id="@+id/action_MovieListFragment_to_MovieDetailFragment"
+            app:destination="@id/movieDetailFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
@@ -50,5 +55,17 @@
         <action
             android:id="@+id/action_mapFragment_to_movieListFragment"
             app:destination="@id/movieListFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/movieDetailFragment"
+        android:name="com.mymovielist.ui.detail.MovieDetailFragment"
+        android:label="Movie Detail"
+        tools:layout="@layout/fragment_movie_detail" >
+        <action
+            android:id="@+id/action_movieDetailFragment_to_movieListFragment"
+            app:destination="@id/movieListFragment" />
+        <argument
+            android:name="movieid"
+            app:argType="long" />
     </fragment>
 </navigation>
