--- a/app/src/main/res/menu/menu_ratinglist.xml
+++ b/app/src/main/res/menu/menu_ratinglist.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/nav_movieList"
+        android:orderInCategory="100"
+        android:title="@string/menu_movieList"
+        app:showAsAction="never" />
     <item
         android:id="@+id/nav_moviesNearYou"
         android:orderInCategory="100"
@@ -11,9 +16,5 @@
         android:orderInCategory="100"
         android:title="@string/menu_rating"
         app:showAsAction="never" />
-    <item
-        android:id="@+id/nav_ratingList"
-        android:orderInCategory="100"
-        android:title="@string/menu_ratingList"
-        app:showAsAction="never" />
+
 </menu>
