--- a/app/src/main/res/layout/card_rating.xml
+++ b/app/src/main/res/layout/card_rating.xml
@@ -65,17 +65,9 @@
                 android:id="@+id/ratingView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{Integer.toString(rating.rating)}"
+                android:text="@{Integer.toString(rating.ratingNumber)}"
                 android:layout_below="@id/content"
                 android:layout_toEndOf="@+id/rating_title"/>
-
-            <TextView
-                android:id="@+id/reviewDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{rating.date.toString()}"
-                android:layout_below="@id/ratingView" />
-
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
