--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -151,6 +151,6 @@
             app:exitAnim="@anim/nav_default_exit_anim" />
         <argument
             android:name="ratingid"
-            app:argType="long" />
+            app:argType="string" />
     </fragment>
 </navigation>
