--- a/app/src/main/res/layout/card_rating.xml
+++ b/app/src/main/res/layout/card_rating.xml
@@ -22,12 +22,23 @@
             android:clickable="false"
             android:padding="16dp">
 
+            <ImageView
+                android:id="@+id/imageIcon"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="16dp"
+                android:contentDescription="@string/app_name"
+                app:srcCompat="@mipmap/ic_launcher_round" />
+
             <TextView
                 android:id="@+id/title_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/title_view"
                 android:layout_alignParentTop="true"
+                android:layout_toEndOf="@+id/imageIcon"
                 android:textSize="30sp" />
 
             <TextView
@@ -44,6 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/review_view"
+                android:layout_toEndOf="@+id/imageIcon"
                 android:layout_below="@id/title" />
 
             <TextView
@@ -59,6 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/rating_view"
+                android:layout_toEndOf="@+id/imageIcon"
                 android:layout_below="@id/content" />
 
             <TextView
