--- a/app/src/main/res/layout/rating_detail_fragment.xml
+++ b/app/src/main/res/layout/rating_detail_fragment.xml
@@ -32,7 +32,7 @@
         android:layout_width="214dp"
         android:layout_height="48dp"
         android:ems="10"
-        android:text="@{ratingvm.observableRating.title}"
+        android:text="@{``+ ratingvm.observableRating.title}"
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
-        android:text="@{ratingvm.observableRating.content}"
+        android:text="@{``+ ratingvm.observableRating.content}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.989"
@@ -88,7 +88,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="number"
-        android:text="@{Integer.toString(ratingvm.observableRating.ratingNumber)}"
+        android:text="@{``+ Integer.toString(ratingvm.observableRating.ratingNumber)}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.98"
