--- a/app/src/main/res/menu/menu_ratinglist.xml
+++ b/app/src/main/res/menu/menu_ratinglist.xml
@@ -16,5 +16,11 @@
         android:orderInCategory="100"
         android:title="@string/menu_rating"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/toggleRatings"
+        android:title=""
+        app:actionLayout="@layout/togglebutton_layout"
+        app:showAsAction="always" />
+
 
 </menu>
