--- a/app/src/main/res/menu/menu_map.xml
+++ b/app/src/main/res/menu/menu_map.xml
@@ -16,4 +16,9 @@
         android:orderInCategory="100"
         android:title="@string/menu_ratingList"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/toggleRatings"
+        android:title=""
+        app:actionLayout="@layout/togglebutton_layout"
+        app:showAsAction="always" />
 </menu>
