--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -55,7 +55,7 @@
     <fragment
         android:id="@+id/nav_moviesNearYou"
         android:name="com.my_movie_list.ui.maps.MapsFragment"
-        android:label="Cinemas near you"
+        android:label="Ratings near you"
         tools:layout="@layout/fragment_maps" >
         <action
             android:id="@+id/action_mapsFragment_to_movieDetailFragment"
